Import of RJBS/Data-GUID-URLSafe-0.004 from CPAN.
gitpan-cpan-distribution: Data-GUID-URLSafe
gitpan-cpan-version:      0.004
gitpan-cpan-path:         RJBS/Data-GUID-URLSafe-0.004.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Changelog for Data-GUID-URLSafe
 
+0.004     2009-01-16
+          add repo info to metadata
+
 0.003     2008-03-05
           fix non-conformant META.yml
 
