Import of RJBS/Data-GUID-URLSafe-0.005 from CPAN.
gitpan-cpan-distribution: Data-GUID-URLSafe
gitpan-cpan-version:      0.005
gitpan-cpan-path:         RJBS/Data-GUID-URLSafe-0.005.tar.gz
gitpan-cpan-author:       RJBS
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,3 +1,13 @@
-Data::GUID::URLSafe 0.004
 
-This module adds urlsafe base64 methods to Data::GUID;
+
+This archive contains the distribution Data-GUID-URLSafe,
+version 0.005:
+
+  url-safe base64-encoded GUIDs
+
+This software is copyright (c) 2007 by Ricardo SIGNES.
+
+This is free software; you can redistribute it and/or modify it under
+the same terms as the Perl 5 programming language system itself.
+
+
